@startuml Диаграмма базы данных



entity Orders {
  * id : INT
  --
  seller_id : TEXT
  admin_id : TEXT
  created_at: DATETIME
  status: "Доставляется" | "Не отправлена" | "Ожидает ответа"
  total_price: REAL
  
  
}

entity Order_Items {
  *item_id: INT
  *order_id: INT
  --
  count:INT

} 



entity Items {
  *id: INT
  --  
  seller_id: INT
  name: TEXT
  article: INT
  price: REAL
  count:INT
  
}


' entity Sellers{
'   *id: INT
'   --
'   login: TEXT
'   password_hash: TEXT
'   INN: INT
'   legal entity: TEXT
'   address: TEXT
'   registered_in: DATETIME
' }

entity Users{
  *id: INT
  --
  Status: "Администратор" |"Поставщик"
  login: TEXT
  password_hash: TEXT
  INN: INT
  legal entity: TEXT
  address: TEXT
  registered_in: DATETIME
}

Orders ||--o{ Order_Items
Items ||--o{ Order_Items

Users ||--o{ Items

Users ||--o{ Orders


@enduml
